2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.[ch]: api review: check-brackets ->
	highlight-matching-brackets

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.[ch]: api review: highlight ->
	highlight_syntax

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.[ch]: api review: tabs-width -> tab-width

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.[ch]: introduce a indent-width property
	that decouples the indentation step from the tab-width setting.
	Fixes bug #352847. Based on a patch by Steve Frécinaux.

	* tests/test-widget.c: test the new functionality.

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcestylescheme.c: add the "description" property
	and make _gtk_source_style_scheme_get_matching_brackets_style and
	_gtk_source_style_scheme_get_current_line_color private since they are
	just for internal use.

	* gtksourceview/gtksourcebuffer.c: adapt to the above.
	* gtksourceview/gtksourceview.c: ditto.

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/makefile.lang: fix highlighting of a rule
	following an empty rule.

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/php.lang: many improvements (here-doc
	strings, numbers highlighting, string variables, ...) based on a patch
	by Eric Norige on bug #448513.

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.c:
	* gtksourceview/language-specs/desktop.lang:

	add comments for translators.

2007-08-22  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/python.lang: add "set" and "frozenset"
	builtins. Bug #469293.

2007-08-21  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/ruby.lang: do not highlight $stderr in
	$stderrfoo. Bug #460652.

2007-08-20  Paolo Maggi  <paolo@gnome.org>
