@@ -120,7 +120,7 @@ GtkSourceLanguageManager
 gtk_source_language_manager_new
 gtk_source_language_manager_get_default
 gtk_source_language_manager_list_languages
-gtk_source_language_manager_get_language_by_id
+gtk_source_language_manager_get_language
 gtk_source_language_manager_set_search_path
 gtk_source_language_manager_get_search_path
 <SUBSECTION Standard>
