@@ -54,7 +54,7 @@ private members and should not be accessed directly.
 @Returns: 
 
 
-<!-- ##### FUNCTION gtk_source_language_manager_get_language_by_id ##### -->
+<!-- ##### FUNCTION gtk_source_language_manager_get_language ##### -->
 <para>
 
 </para>
