@@ -1,3 +1,8 @@
+2007-08-26  Paolo Borelli  <pborelli@katamail.com>
+
+	* gtksourceview/gtksourcelanguagemanager.[ch]: api review:
+	get_language_by_id -> get_language.
+
 2007-08-25  Paolo Borelli  <pborelli@katamail.com>
 
 	* gtksourceview/gtksourcebuffer.[ch]: api review: check-brackets ->
